- https://github.com/eclipse-syson/syson/issues/1766[#1766] [diagrams] Also prevent the creation of redundant `Subsetting`, `Redefinition` and `Subclassifications`
- https://github.com/eclipse-syson/syson/issues/1765[#1765] [diagrams] Allow to create a `SatisfyRequirement` on `PartDefinition` or `PartUsage`.

=== New features

- https://github.com/eclipse-syson/syson/issues/1565[#1565] Provide a way to duplicate semantic element in the _Explorer_ view.
- https://github.com/eclipse-syson/syson/issues/1737[#1737] [diagrams] Add creation tools to InterconnectionCompartmentNode
- https://github.com/eclipse-syson/syson/issues/1395[#1395] Provide a way to duplicate a semantic element ans its representation node in the _General View_ diagram.

== v2025.12.0

=== Shapes

- https://github.com/eclipse-syson/syson/issues/1581[#1581] [diagrams] Display inherited ports as border nodes in diagrams.

=== Architectural decision records

- [ADR-002] Services organization

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/1628[#1628] [services] Introduce new services organization.
https://doc.mbse-syson.org/syson/main/developer-guide/index.html#services_organization[See the developer guide in the documentation for more details].
Also introduces new `ServiceMethod` helper class to build AQL service call expressions from type-safe Java method references instead of hardcoded strings.
- [services] _isActor(Element)_ has been moved from `ViewNodeService` to `MetamodelElementQueryService`.
- [services] The following services have been moved from `LabelService` and `ViewLabelService` to `DiagramQueryLabelService`:
* String getBorderNodeUsageLabel(Usage usage)
* String getCompartmentItemLabel(Documentation documentation)
* String getCompartmentItemLabel(Usage usage)
* String getContainerLabel(Element element)
* String getDefaultInitialDirectEditLabel(Comment comment)
* String getDefaultInitialDirectEditLabel(Element element)