@@ -40,7 +40,9 @@ import org.eclipse.sirius.components.view.diagram.OutsideLabelDescription;
 import org.eclipse.sirius.components.view.diagram.SynchronizationPolicy;
 import org.eclipse.sirius.components.view.diagram.ToolSection;
 import org.eclipse.sirius.components.view.diagram.UserResizableDirection;
+import org.eclipse.syson.diagram.common.view.services.NodeDefaultSizeExpressionSwitch;
 import org.eclipse.syson.diagram.common.view.services.ViewEdgeToolSwitch;
+import org.eclipse.syson.diagram.common.view.services.dto.NodeDefaultSizeExpression;
 import org.eclipse.syson.diagram.services.aql.DiagramMutationAQLService;
 import org.eclipse.syson.diagram.services.aql.DiagramQueryAQLService;
 import org.eclipse.syson.services.UtilService;
@@ -160,10 +162,11 @@ public abstract class AbstractUsageNodeDescriptionProvider extends AbstractNodeD
     @Override
     public NodeDescription create() {
         String domainType = SysMLMetamodelHelper.buildQualifiedName(this.eClass);
+        NodeDefaultSizeExpression defaultSizeExpression = new NodeDefaultSizeExpressionSwitch().doSwitch(this.eClass);
         NodeDescriptionBuilder builder = this.diagramBuilderHelper.newNodeDescription()
                 .collapsible(true)
-                .defaultHeightExpression(ViewConstants.DEFAULT_CONTAINER_NODE_HEIGHT)
-                .defaultWidthExpression(ViewConstants.DEFAULT_NODE_WIDTH)
+                .defaultHeightExpression(defaultSizeExpression.defaultHeightExpression())
+                .defaultWidthExpression(defaultSizeExpression.defaultWidthExpression())
                 .domainType(domainType)
                 .insideLabel(this.createInsideLabelDescription())
                 .outsideLabels(this.createOutsideLabelDescriptions().toArray(OutsideLabelDescription[]::new))
