@@ -1,0 +1,21 @@
+/*******************************************************************************
+ * Copyright (c) 2025 Obeo.
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v2.0
+ * which accompanies this distribution, and is available at
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
+ *
+ * Contributors:
+ *     Obeo - initial API and implementation
+ *******************************************************************************/
+package org.eclipse.syson.diagram.common.view.services.dto;
+
+/**
+ * Record containing the default size of a node.
+ *
+ * @author frouene
+ */
+public record NodeDefaultSizeExpression(String defaultHeightExpression, String defaultWidthExpression) {
+}
