@@ -81,8 +81,8 @@ public class ViewUsageNodeDescriptionProvider extends AbstractNodeDescriptionPro
         String domainType = SysMLMetamodelHelper.buildQualifiedName(SysmlPackage.eINSTANCE.getViewUsage());
         return this.diagramBuilderHelper.newNodeDescription()
                 .collapsible(true)
-                .defaultHeightExpression("101")
-                .defaultWidthExpression("300")
+                .defaultHeightExpression(ViewConstants.DEFAULT_VIEW_USAGE_NODE_HEIGHT)
+                .defaultWidthExpression(ViewConstants.DEFAULT_VIEW_USAGE_NODE_WIDTH)
                 .domainType(domainType)
                 .insideLabel(this.createInsideLabelDescription())
                 .name(this.getNodeDescriptionName())
