@@ -63,6 +63,18 @@ image::release-notes-redundant-feature-typing-message.png[Message displayed when
 
 - In diagrams, it is now possible to create a `SatisfyRequirement` from a `PartDefinition` or `PartUsage` graphical node.
 
+- In diagrams, the default graphical node size has been adjusted to avoid word breaks in label names.
++
+[cols="1,1"]
+|===
+|Before
+|After
+
+a|image::release-notes-enumeration-definition-before.png[Enumeration definition node before, align="center" width=50%,height=50%]
+a|image::release-notes-enumeration-definition-after.png[Enumeration definition node after, align="center" width=50%,height=50%]
+|===
++
+
 == Technical details
 
 * For technical details on this {product} release (including breaking changes), please refer to https://github.com/eclipse-syson/syson/blob/main/CHANGELOG.adoc[changelog].
